# poc_fastapi

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
fastapi_webserver/: entrypoint.py
fastapi_webserver/templates/: analyze.html  home.html  login.html  transfer.html
tests/: conftest.py
tests/unit/: test_app.py
